# BinLoader

./: CMakeLists.txt  LICENSE  binary.h  disasembler.cpp  disasm.cpp  loader.cpp  main.cpp
include/: bfd_interface.h  binary.h  common.h  disasembler.h  disasm.h  ins.h  loader.h  section.h  symbol.h
